# musicplayer

./: .gitignore  backend.py  config.py  models.py  server_types.py
client/: pom.xml
client/src/main/java/: module-info.java
client/src/main/java/com/example/musicplayer5/: HelloApplication.java  HelloController.java  PlayerController.java  Song.java  SongItemController.java  Utilities.java
client/src/main/resources/com/example/musicplayer5/: hello-view.fxml  listen.fxml  song.fxml
routers/: __init__.py
routers/api/: __init__.py
routers/api/v1/: __init__.py  songs.py
server/: backend.py  dependencies.py  pyproject.toml
server/routers/: __init__.py
server/routers/api/: __init__.py
server/routers/api/v1/: __init__.py  songs.py
server/utils/: music.py
utils/: music.py  time.py
